crates/weft-snapshots/tests/snapshots/solid-tsx/example-table.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-table as solid-tsx
---
import { Show } from "solid-js";

export type WeftEvent = { id: string; action: string; item?: string };

export type WeftProps = {
  data?: any;
  actions?: Record<string, (event: WeftEvent) => void>;
  onChange?: (path: string, value: unknown) => void;
};

type WeftKey = {
  key: string;
  target: unknown;
  currentTarget: { parentElement: HTMLElement | null };
  preventDefault(): void;
};

function _text(v: unknown): string {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _squash(v: string): string {
  return v.trim().replace(/\s+/g, " ");
}

function _list(v: unknown): any[] {
  return Array.isArray(v) ? v : [];
}

function _act(actions: WeftProps["actions"], event: WeftEvent): void {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _press(e: WeftKey, fire: () => void): void {
  if (e.target !== e.currentTarget || (e.key !== "Enter" && e.key !== " ")) return;
  e.preventDefault();
  fire();
}

function _ix(list: any[]): [any, () => number][] {
  return list.map((v, i) => [v, () => i]);
}

export default function WeftScreen(props: WeftProps) {
  return (
    <main data-weft-id="root" aria-label="Orders">
      {(() => {
        const _cols = [
          (
            <th data-weft-id="col-id" scope="col">Order</th>
          ),
          (
            <th data-weft-id="col-total" scope="col" aria-sort="descending" tabindex={0} onClick={() => _act(props.actions, { id: "col-total", action: "orders.sort" })} onKeyDown={(_e) => _press(_e, () => _act(props.actions, { id: "col-total", action: "orders.sort" }))}>Total</th>
          ),
          ..._ix(_list(props.data?.orders)).flatMap(([order, _i0]) => []),
        ];
        const _rows = [
          ..._ix(_list(props.data?.orders)).flatMap(([order, _i0]) => [
            (
              <tr data-weft-id={"order-row[" + _i0() + "]"} aria-selected="false">
                <td data-weft-id={"order-id[" + _i0() + "]"}>
                  <div data-weft-id={"order-id-text[" + _i0() + "]"}>
                    {!(_text(order?.id).trim() === "") ? _squash(_text(order?.id)) : ""}
                  </div>
                </td>
                <td data-weft-id={"order-total[" + _i0() + "]"}>
                  <div data-weft-id={"order-total-text[" + _i0() + "]"}>
                    {!(_text(order?.total).trim() === "") ? _squash(_text(order?.total)) : ""}
                  </div>
                </td>
              </tr>
            ),
          ]),
        ];
        return (
          <table data-weft-id="orders" data-state="ready" aria-label="Recent orders">
            <Show when={_cols.length > 0}>
              <thead>
                <tr>
                  {_cols}
                </tr>
              </thead>
            </Show>
            <Show when={!(_list(props.data?.orders).length > 0)} fallback={(
              <Show when={_rows.length > 0}>
                <tbody>
                  {_rows}
                </tbody>
              </Show>
            )}>
              <tbody>
                <tr data-weft-slot="empty">
                  <td colspan={Math.max(1, _cols.length)}>
                    <div data-weft-id="orders-empty">No orders yet.</div>
                    <button data-weft-id="orders-shop" type="button" onClick={(_e) => _act(props.actions, { id: "orders-shop", action: "nav.shop" })}>Start shopping</button>
                  </td>
                </tr>
              </tbody>
            </Show>
          </table>
        );
      })()}
    </main>
  );
}
